--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1669,107 +1669,107 @@ stories:
   domain: http://www.dailytimes.com/
   link: https://www.glasgowdailytimes.com/news/grant-to-fund-field-trips-to-mammoth-cave-for-local/article_ee19585c-25af-11ea-82f6-9724c00ae4e3.html
 images:
-- name: oldcabin-oldcabin-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-alien-goggles.jpg
-- name: flower-barbed-wire-flower-barbed-wire-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-diego-rivera1.jpg
-- name: white-house-lawn-white-house-window-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-blocks.jpg
-- name: abe-lincoln-one-wols-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-wols-file-00-00-00-00.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-internet-numbers.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-internet-numbers.JPG
-- name: abe-lincoln-one-post-modern-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-07-91.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-- name: death-valley-death-valley-national-park-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-crafty-painting.jpg
-- name: stories-granaryfield-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-granaryfield-dali-three.jpg
-- name: death-valley-death-valley-national-park.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park.jpg
-- name: supreme-court-supremecourt-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kandinsky-bv.jpg
-- name: lincoln-memorial-lincolnmemorial-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-post-modern.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-3.jpg
-- name: lincoln-memorial-lincolnmemorial-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-gred-mash.jpg
-- name: old-door-lock-old-door-lock-2-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dry-skin.jpg
-- name: nazi-invasion-piano-in-street-good.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-piano-in-street-good.jpg
-- name: locked-up-steam-lock-up-steam-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-spagetti-accident.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit.jpg
-- name: oldhouse-oldhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alberto-giacometti.jpg
-- name: amusement-park-amusement-park-2-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-gan-vogh.jpg
-- name: old-granary-field-oldhouse-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-pablo-blue.jpg
-- name: aws-s3-stories-crypto-machine-bletchley-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-crypto-machine-bletchley-copper-circuit.png
-- name: stalin-time-castle-clouds-green-lawn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-castle-clouds-green-lawn.jpg
-- name: hollywood-building-hollywood-building-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-rainbow-festival.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-constitution.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-constitution.JPG
-- name: rockingchair-face-2-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-atari-asteroids.jpg
-- name: braceros-domingo-ulloa-skulls-catacomb-up-close.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-skulls-catacomb-up-close.jpg
-- name: oldhouse-granaryfield-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-oily-mcoilface.jpg
-- name: old-school-house-old-schoolhouse-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-free-woman.jpg
-- name: yosemite-yosemite-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-green-zuma.jpg
-- name: la-muse-google-front-of-business.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-google-front-of-business.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit.JPG
-- name: meadowbutterfly-meadow-butterfly-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alien-goggles.jpg
-- name: supreme-court-supremecourt-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-creativity.jpg
-- name: old-school-house-old-schoolhouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-clean-view.jpg
-- name: stories-soldier-computer-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-soldier-computer-dark-dali.jpg
-- name: mediterranean-mediterranean-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-nazi-poster.jpg
-- name: status-berlin-status-berlin-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-kand-two.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
-- name: docks-docks-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-crafty-painting.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-mucha-mult.jpg
-- name: san-francisco-street-view-san-francisco-street-view-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-clean-view.jpg
-- name: store-on-corner-store-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-light-dali.jpg
-- name: old-granary-field-granaryfield-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-yellow-collage.jpg
-- name: scream-DSC_0027.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0027.jpg
-- name: braceros-domingo-ulloa-gypsy-house-with-pen.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-gypsy-house-with-pen.jpg
+- name: stories-machine-road-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-copper-circuit.jpg
+- name: old-gas-pumps-oldgaspumps-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-crabapple.jpg
+- name: razorcliff-razorcliff-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-gred-mash.jpg
+- name: oldbarn-oldbarn-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dark-soul.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-spagetti-accident.jpg
+- name: trucksilo-trucksilo-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-cinnamon-rolls.jpg
+- name: miamibeach-miamibeach-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-sand-paper.jpg
+- name: carry-load-carryload-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crunch-paper.jpg
+- name: old-door-lock-old-door-lock-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-neo-instinct.jpg
+- name: oldsmallboat-oldsmallboat-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-plentiful.jpg
+- name: stalin-time-surveillance-cameras_36569244062_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-surveillance-cameras_36569244062_o.jpg
+- name: docks-docks-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-marcel-duchamp.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-atari-missle.jpg
+- name: stories-server-cloud1-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-cloud1-feed-people.jpg
+- name: meadowbutterfly-meadow-butterfly-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-far-away.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-smoking-cigarette.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-smoking-cigarette.JPG
+- name: server-cloud-server-racks-clouds-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crafty-painting.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-gan-vogh.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-gan-vogh.JPG
+- name: san-francisco-city-bridge-sf-city-bridge-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-kand-two.jpg
+- name: paris-paris-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-yellow-collage.jpg
+- name: oldhouse-granaryfield-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-color.jpg
+- name: miamibeach-miamibeach-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-internet-numbers.jpg
+- name: berlinwall2-berlinwall-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-smooth-ride.jpg
+- name: oldcabin-store-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-dresden.jpg
+- name: oldbarn-oldbarn-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-kand-two.jpg
+- name: san-francisco-street-view-san-francisco-street-view-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-sunday.jpg
 - name: san-francisco-skyline-night-san-francisco-skyline-night-atari-missle.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-atari-missle.jpg
-- name: old-school-house-old-schoolhouse-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-oily-mcoilface.jpg
-- name: christianity-christianity-under-construction-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-circuit-3.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
-- name: walled-garden-walled-garden-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-oily-mcoilface.jpg
+- name: eduardo-eduardo-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-crafty-painting.jpg
+- name: oldbarn-oldbarn-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-granite.jpg
+- name: nazi-invasion-looking-down-over-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-looking-down-over-city.jpg
+- name: rain-princess-DSC_0015.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0015.jpg
+- name: white-house-lawn-white-house-window-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-nazi-poster.jpg
+- name: walled-garden-walled-garden-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-mucha-mult.jpg
+- name: old-granary-field-granaryfield-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dali-three.jpg
+- name: powerlines-power-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-yellow-paper.jpg
+- name: abandonedbuildings_graham_sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_graham_sutherland.jpg
+- name: catacombs-catacombs-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-aqua.jpg
+- name: locked-up-steam-lock-up-steam-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-atari-asteroids.jpg
+- name: curtain-curtain-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-hot-spicy.jpg
+- name: cargo-ship-cargo-ship-on-sea-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-space-pizza.jpg
+- name: braceros-domingo-ulloa-old-comuter-wheels-crypto.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-comuter-wheels-crypto.jpg
+- name: trucksilo-trucksilo-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dry-skin.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-graham-sutherland.jpg
+- name: nazi-invasion-docs-cranes-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-docs-cranes-waterfront.jpg
+- name: docks-docks-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-two.jpg
+- name: machine-road-machine-road-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit-3.jpg
+- name: flower-barbed-wire-flower-barbed-wire-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-feed-people.jpg
+- name: abandonedbuildings_kand_two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_kand_two.jpg
+- name: windowmountain-window-mountain-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-ww2-dresden.jpg
+- name: beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
 ---
 Beautiful But Missing Something.&nbsp;Residents Asked To Keep City Hydrants Visible.&nbsp;Eveleth Police Searching For Missing Woman And Baby Daughter.&nbsp;Reasons Why Termites Infest Your Home And How To Avoid It.&nbsp;Santa's Elves Again Bring Christmas Cheer To Dundalk.&nbsp;You Are Our North Star.&nbsp;Two McClatchy Papers Cutting Frequency.&nbsp;Online Classes Keep Football Players Out Of Academic Fray.&nbsp;
